Global/Templates/k8s/app-standard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: <appName>
  namespace: <namespace>
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: <host1>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: <appName>
                port:
                  number: <servicePort>
